prod_snapshot_2015-09-24_1030/objects/SLA_Snapshot__c.object
<CustomObject>
    <description>Target Object for the SLA Met % Reporting Snapshot</description>
    <fields>
        <fullName>SLA_Met_Percent__c</fullName>
        <formula>SLA_Met__c / Total_Campaigns__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Met Percent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SLA_Met__c</fullName>
        <description>Number of Campaigns meeting SLA for this time period</description>
        <label>SLA Met</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Product_Type__c</fullName>
        <label>SLA Product Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Campaigns__c</fullName>
        <label>Total Campaigns</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SLA Snapshot</label>
    <nameField>
        <label>SLA Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLA Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>